# EngineDLL-GPU

./: .gitignore  CMakeLists.txt
Experts/: GPU_EngineHub.mq5  WaveSpecGPU_Hub.mq5
Include/GPU/: GPU_Engine.mqh  GPU_Hotkeys.mqh  GPU_Shared.mqh  GPU_Subwindows.mqh
Include/WaveSpecGPU/: GpuEngine.mqh  HotkeyManager.mqh  WaveSpecShared.mqh
Include/client_ipc/: GpuEngineClientApi.h
Include/engine_core/: GpuEngineCore.h  GpuEngineExports.h  GpuEngineJob.h  GpuEngineTypes.h
Include/ipc/: ServiceProtocol.h
Indicators/: GPU_PhaseViz.mq5  GPU_WaveViz.mq5  PhaseViz_GPU.mq5  WaveSpecZZ_GaussGPU.mq5
Indicators/legacy/: GPU_WaveViz_1.0.4_legacy.mq5
MQL-GPU/gpu/: GpuBridge.exp  GpuBridge.lib
docs/: DeployGpuDLL.md  GpuEngine_API.md  GpuEngine_Architecture.md  GpuEngine_Streams.md
gpu_engine/: CMakeLists.txt  README.md
gpu_engine/include/: GpuEngineCore.h  GpuEngineExports.h  GpuEngineJob.h  GpuEngineTypes.h
gpu_engine/src/: CudaProcessor.cu  CudaProcessor.h  GpuEngineCore.cpp  exports.cpp
scripts/: DeployGpuDLL.ps1  StartGpuEngineService.ps1  deploy_gpu_dll.py  setup_junctions.ps1  targets.txt
src/client_ipc/: CMakeLists.txt
src/client_ipc/src/: Client.cpp
src/engine_core/: CMakeLists.txt
src/engine_core/src/: CudaProcessor.cu  GpuEngineCore.cpp  exports.cpp
src/service/: CMakeLists.txt
src/service/src/: Service.cpp
